Add undo step to Alembic and Collada importers...

Re T77754.